Added setting configuration
